; ModuleID = '/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigAddLineNumberToOption.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigAddLineNumberToOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rewriteConfigState = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigAddLineNumberToOption(%struct.rewriteConfigState* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rewriteConfigState*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %4, align 8
  %9 = getelementptr inbounds %struct.rewriteConfigState, %struct.rewriteConfigState* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32* @dictFetchValue(i32 %10, i32 %11)
  store i32* %12, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %3
  %16 = call i32* (...) @listCreate()
  store i32* %16, i32** %7, align 8
  %17 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %4, align 8
  %18 = getelementptr inbounds %struct.rewriteConfigState, %struct.rewriteConfigState* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @sdsdup(i32 %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @dictAdd(i32 %19, i32 %21, i32* %22)
  br label %24

24:                                               ; preds = %15, %3
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = inttoptr i64 %27 to i8*
  %29 = call i32 @listAddNodeTail(i32* %25, i8* %28)
  ret void
}

declare dso_local i32* @dictFetchValue(i32, i32) #1

declare dso_local i32* @listCreate(...) #1

declare dso_local i32 @dictAdd(i32, i32, i32*) #1

declare dso_local i32 @sdsdup(i32) #1

declare dso_local i32 @listAddNodeTail(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
